# bgzippp

./: .gitignore  CMakeLists.txt  init.sh  vcpkg.json
src/bgzippp/: CMakeLists.txt  main.cpp
